--- a/connect/index.html
+++ b/connect/index.html
@@ -505,7 +505,7 @@
 
               try {
                 const response = await fetch(
-                  "https://newsendmail-rt3o.onrender.com/api/send-email",
+                  "https://sendmailhhhhhhhhhhhh.vercel.app/api",
                   {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
@@ -513,7 +513,7 @@
                   }
                 );
                 console.log(dataToSend);
-                
+                console.log(response)
                 // Optionally handle response here
               } catch (error) {
                 console.error("Error submitting form:", error);
