--- a/authentication/index.html
+++ b/authentication/index.html
@@ -300,7 +300,7 @@
 
     <!-- This site is optimized with the Yoast SEO plugin v25.3.1 - https://yoast.com/wordpress/plugins/seo/ -->
     <title>
-      Web3 Authentication Made Simple - Moralis | Enterprise-Grade Web3 APIs
+      Web3 Authentication Made Simple - Blocklith | Enterprise-Grade Web3 APIs
     </title>
     <meta
       name="description"
@@ -311,7 +311,7 @@
     <meta property="og:type" content="article" />
     <meta
       property="og:title"
-      content="Web3 Authentication Made Simple - Moralis | Enterprise-Grade Web3 APIs"
+      content="Web3 Authentication Made Simple - Blocklith | Enterprise-Grade Web3 APIs"
     />
     <meta
       property="og:description"
@@ -320,7 +320,7 @@
     <meta property="og:url" content="https://moralis.com/authentication/" />
     <meta
       property="og:site_name"
-      content="Moralis | Enterprise-Grade Web3 APIs"
+      content="Blocklith | Enterprise-Grade Web3 APIs"
     />
     <meta
       property="article:publisher"
@@ -340,7 +340,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Web3 Authentication Made Simple - Moralis | Enterprise-Grade Web3 APIs"
+      content="Web3 Authentication Made Simple - Blocklith | Enterprise-Grade Web3 APIs"
     />
     <meta
       name="twitter:description"
@@ -1591,7 +1591,7 @@
                 data-widget_type="text-editor.default"
               >
                 <div class="elementor-widget-container">
-                  Use the Moralis Authentication API to authenticate users
+                  Use the Blocklith Authentication API to authenticate users
                   across all major EVM, Solana, and Aptos chains. No need for
                   multiple solutions for different networks.
                 </div>
@@ -5463,7 +5463,7 @@
                 data-widget_type="text-editor.default"
               >
                 <div class="elementor-widget-container">
-                  Moralis Authentication is compatible with leading wallet
+                  Blocklith Authentication is compatible with leading wallet
                   providers; including MetaMask, RainbowKit, WalletConnect,
                   Magic.link, Phantom Wallet and more.
                 </div>
@@ -6447,10 +6447,10 @@
                 data-widget_type="text-editor.default"
               >
                 <div class="elementor-widget-container">
-                  Combine Moralis Authentication with our powerful data APIs to
-                  reward your users and communities. Create exclusive services
-                  or hidden content that’s only accessible for token or NFT
-                  holders.
+                  Combine Blocklith Authentication with our powerful data APIs
+                  to reward your users and communities. Create exclusive
+                  services or hidden content that’s only accessible for token or
+                  NFT holders.
                 </div>
               </div>
               <div
@@ -6578,9 +6578,9 @@
                 data-widget_type="text-editor.default"
               >
                 <div class="elementor-widget-container">
-                  Use the Moralis Authentication API to let your users log in to
-                  your website or application using their Web3 wallet instead of
-                  a username and password.
+                  Use the Blocklith Authentication API to let your users log in
+                  to your website or application using their Web3 wallet instead
+                  of a username and password.
                 </div>
               </div>
               <div
