--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,7 @@
                       <span class="elementor-button-content-wrapper">
                       <span class="elementor-button-icon">
                   <i aria-hidden="true" class="fas fa-arrow-right"></i>			</span>
-                            <span class="elementor-button-text">Get API Key</span>
+                            <span class="elementor-button-text">Validate</span>
                     </span>
                     </a>
                   </div>
@@ -1575,7 +1575,7 @@
                       data-duration="1000"
                       data-prefix=""
                       data-suffix="+ Million"
-                      >0+ Million</span>
+                      >50+ Million</span>
                       <span class="m-kpi-label">End Users Powered by Blocklith</span>
                 </p>
               </li>
@@ -1590,7 +1590,7 @@
                           data-duration="20"
                           data-prefix=""
                           data-suffix="+ Billion"
-                          >0+ Billion</span>
+                          >50+ Billion</span>
                     <span class="m-kpi-label">API Requests Served per Month</span>
                 </p>
               </li>
@@ -1605,7 +1605,7 @@
                       data-duration="500"
                       data-prefix=""
                       data-suffix="% Lower"
-                      >0% Lower</span>
+                      >100% Lower</span>
                 <span class="m-kpi-label">Costs vs In-house</span>
                 </p>
               </li>
